# Pigeon

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .swiftformat  .swiftlint.yml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSING.md  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: implement.md  security-review.md  test.md
.github/actions/rust-crate-ci/: action.yml
.github/workflows/: docs.yml  pigeon-core-ffi.yml  pigeon-core.yml  relay.yml  rust.yml  swift.yml  website.yml
Pigeon/: CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml
Pigeon/Pigeon/: ContentView.swift  Info.plist  PigeonApp.swift
Pigeon/Pigeon.xcodeproj/: project.pbxproj
Pigeon/Pigeon.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Pigeon/Pigeon/Core/Contacts/: Contact.swift  ContactCard.swift
Pigeon/Pigeon/Core/Identity/: BackgroundDelivery.swift  IdentityKey.swift  IdentityManager.swift  KeychainStore.swift  SafetyNumber.swift
Pigeon/Pigeon/Core/Mesh/: MeshService.swift
Pigeon/Pigeon/Core/Notifications/: MessageNotifier.swift  RemoteNotificationManager.swift
Pigeon/Pigeon/Core/Session/: ChatMessage.swift  ChatPresenter.swift  ConversationStore.swift  LockedInbox.swift  RehandshakeGate.swift  SessionManager+Delivery.swift  SessionManager+MessageCodec.swift  SessionManager+Messaging.swift  SessionManager+Reactions.swift  SessionManager+UI.swift  SessionManager.swift  SessionPersistence.swift  SessionRegistry.swift
Pigeon/Pigeon/Core/Storage/: EncryptedStore.swift  SecretBox.swift  Vault.swift
Pigeon/Pigeon/Core/Transport/: BluetoothConstants.swift  CompositeTransport.swift  LocalWiFiTransport.swift  PeerTransport.swift  RelayDepositQueue.swift  RelayPinger.swift  RelaySettings.swift  RelayTransport.swift  Transport.swift
Pigeon/Pigeon/Features/Chat/: ChatComposer.swift  ChatStatusComponents.swift  ChatView+Components.swift  ChatView.swift
Pigeon/Pigeon/Features/Components/: ContactAvatar.swift  CopiedToast.swift  MaxBrightness.swift  ScannerReticle.swift
Pigeon/Pigeon/Features/Contacts/: AddContactView.swift  Clipboard.swift  ContactsListView.swift  IdentityQRView.swift  QRCode.swift  QRScanner.swift
Pigeon/Pigeon/Features/Home/: ChatsListView.swift  MenuView.swift  RelaySettingsView.swift
Pigeon/Pigeon/Features/Onboarding/: OnboardingNameView.swift  UnlockView.swift
Pigeon/PigeonFFI/: Package.swift
Pigeon/PigeonFFI/Sources/PigeonFFI/: PigeonCore.swift  PigeonMesh.swift
Pigeon/PigeonFFI/Tests/PigeonFFITests/: PigeonFFIRoundTripTests.swift
Pigeon/PigeonTests/: BluetoothFragmentBudgetTests.swift  CompositeTransportTests.swift  ContactCardTests.swift  ContactsBookTests.swift  DeliveryStatusTests.swift  LocalWiFiTransportTests.swift  LockedInboxTests.swift  MessageCodecTests.swift  RehandshakeGateTests.swift  RelayRoutingTests.swift  RelaySettingsTests.swift  SafetyNumberTests.swift  SecretBoxTests.swift  SessionPersistenceTests.swift  SessionRelaunchDeliveryTests.swift  TransportChannelTests.swift
Pigeon/docs/: API.md  APPLE_EXPORT_COMPLIANCE.md  CONTRIBUTING.md  SOURCE.md  index.md
PigeonCore/: Package.resolved  Package.swift
PigeonCore/Sources/PigeonCore/: PigeonCore.swift  PigeonMesh.swift
PigeonCore/Tests/PigeonCoreTests/: PigeonCoreRoundTripTests.swift
PigeonCrypto/: CONTRIBUTING.md  Package.resolved  Package.swift  README.md  mkdocs.yml
PigeonCrypto/Sources/PigeonCrypto/: ConstantTime.swift  DoubleRatchet.swift  IdentityBundle.swift  NoiseHandshake.swift  Primitives.swift  SecretBox.swift  SecureMemory.swift  SecureSession.swift  X3DH.swift
PigeonCrypto/Tests/PigeonCryptoTests/: ConstantTimeTests.swift  DoubleRatchetTests.swift  IdentityBundleTests.swift  NoiseHandshakeTests.swift  PrimitivesTests.swift  SecretBoxTests.swift  SecureMemoryTests.swift  SecureSessionTests.swift  SessionLifecycleTests.swift  X3DHTests.swift
PigeonCrypto/docs/: API.md  CONTRIBUTING.md  SOURCE.md  index.md
PigeonMesh/: CONTRIBUTING.md  Package.resolved  Package.swift  README.md  mkdocs.yml
PigeonMesh/Sources/PigeonMesh/: Fragmentation.swift  MeshPacket.swift  SessionEnvelope.swift
PigeonMesh/Tests/PigeonMeshTests/: FragmentationTests.swift  MeshPacketTests.swift  SessionEnvelopeTests.swift
PigeonMesh/docs/: API.md  CONTRIBUTING.md  SOURCE.md  index.md
PigeonRelay/: CONTRIBUTING.md  Cargo.toml  README.md  mkdocs.yml
PigeonRelay/docs/: API.md  CONTRIBUTING.md  SOURCE.md  index.md
PigeonRelay/src/: main.rs  tests.rs
docs/: API.md  APPLE_EXPORT_COMPLIANCE.md  CNAME  CONTRIBUTING.md  FUTURE_ROADMAP.md  HOW_IT_WORKS.md  ROADMAP.md  SECURITY_MODEL.md  SOURCE.md  index.md
docs/diagrams/: generate_diagrams.py
pigeon-core/: Cargo.toml  build.rs  mkdocs.yml
pigeon-core-ffi/: Cargo.toml  README.md  build-xcframework.sh
pigeon-core-ffi/src/: lib.rs
pigeon-core/docs/: API.md  CONTRIBUTING.md  index.md
pigeon-core/src/: account.rs  error.rs  identity.rs  lib.rs  prekey.rs  session.rs  wire.rs
pigeon-core/tests/: pairwise.rs
pigeon-ffi/: Cargo.toml  README.md  build-xcframework.sh
pigeon-ffi/src/: lib.rs  mesh.rs
pigeon-mesh/: Cargo.toml  mkdocs.yml
pigeon-mesh/docs/: API.md  CONTRIBUTING.md  index.md
pigeon-mesh/src/: envelope.rs  fragment.rs  lib.rs  packet.rs
pigeon-relay/: .dockerignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  mkdocs.yml
pigeon-relay/docs/: API.md  CONTRIBUTING.md  index.md
pigeon-relay/src/: connection.rs  mailbox.rs  main.rs  protocol.rs  push.rs  state.rs  tests.rs
proto/pigeon/wire/v1/: pigeon_wire.proto
relay/: Dockerfile  README.md
relay/src/: main.rs
scripts/: serve-docs.sh
site/: .dockerignore  README.md  index.html  styles.css
site/deploy/: Dockerfile
site/deploy/k8s/: deployment.yaml  kustomization.yaml  service.yaml
site/deploy/nginx/: default.conf
site/privacy-policy/: index.html
site/support/: index.html
