[workspace]
members = [
  "pigeon-core",
  "pigeon-core-ffi",
  "PigeonRelay",
]
resolver = "2"

[profile.release]
# Keep release artifacts small when building from the repository workspace. The
# relay's Docker build still uses PigeonRelay/ as its context and keeps its
# standalone release profile there.
strip = true
