[package]
name = "pigeon-relay"
version = "0.1.0"
edition = "2021"
description = "Pigeon's zero-knowledge, federated ciphertext relay (blind mailbox)."
license = "AGPL-3.0-only"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = "2"
base64 = "0.22"
hex = "0.4"
rand = "0.8"

# A blind mailbox does not need to be large or fast; optimize the image for size.
[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
