[package]
name = "pigeon-core-ffi"
version = "0.1.0"
edition = "2021"
# Matches the sibling pigeon-core crate's declared license.
license = "AGPL-3.0-only"
description = "UniFFI bindings exposing pigeon-core (Olm via vodozemac) to Swift."

[lib]
# staticlib/cdylib for the iOS XCFramework; lib so the uniffi-bindgen bin and
# tests can link the crate.
crate-type = ["staticlib", "cdylib", "lib"]
name = "pigeon_core_ffi"

[[bin]]
# In-crate bindgen so the generator version always matches the linked uniffi.
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[profile.release]
# Strip symbols from the static libs that go into the XCFramework — they bloat
# the artifact and the app links its own symbols anyway.
strip = true

[dependencies]
pigeon-core = { path = "../pigeon-core" }
# Needed directly only to (de)serialize the Olm AccountPickle at the FFI seam;
# pigeon-core owns all protocol use of vodozemac.
vodozemac = "0.10"
uniffi = { version = "0.31", features = ["cli"] }
serde_json = "1"
