[package]
name = "pigeon-core"
version = "0.1.0"
edition = "2024"
description = "Pigeon's pairwise end-to-end-encrypted messaging core (Olm via vodozemac), with an Ed25519 identity binding over Olm's Curve25519 identity key."
license = "Apache-2.0 OR MIT"

# NOTE: pigeon-core is permissively licensed and MUST NOT depend on the AGPL
# PigeonRelay. It is a standalone crate (not a workspace member) so the relay's
# Docker build, which uses PigeonRelay/ as its context, stays untouched.

[dependencies]
# Olm Account/Session: audited Double Ratchet + async-first prekey establishment.
vodozemac = "0.10"
# The identity<->static binding: an Ed25519 identity key signs Olm's Curve25519
# identity key. This is the one piece of protocol trust we keep; everything
# below it (ratchet, session setup, message format) is vodozemac's.
ed25519-dalek = "2"
# Defence-in-depth wiping of any key bytes we hold outside vodozemac.
zeroize = { version = "1", features = ["zeroize_derive"] }
# OS entropy for the Ed25519 identity seed (avoids the rand_core version skew
# between the `rand` crate and ed25519-dalek 2.x).
getrandom = "0.2"
