[package]
name = "pigeon-ffi"
version = "0.1.0"
edition = "2021"
# Matches the sibling pigeon-core crate's declared license.
license = "AGPL-3.0-only"
description = "UniFFI bindings exposing pigeon-core and pigeon-mesh to Swift."

[lib]
# staticlib/cdylib for the iOS XCFramework; lib so the uniffi-bindgen bin and
# tests can link the crate.
crate-type = ["staticlib", "cdylib", "lib"]
name = "pigeon_ffi"

[[bin]]
# In-crate bindgen so the generator version always matches the linked uniffi.
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
pigeon-core = { path = "../pigeon-core" }
# The transport-agnostic mesh core, surfaced to Swift through this same bridge
# so the app links one XCFramework. pigeon-mesh stays binding-free itself.
pigeon-mesh = { path = "../pigeon-mesh" }
# Needed directly only to (de)serialize the Olm AccountPickle at the FFI seam;
# pigeon-core owns all protocol use of vodozemac.
vodozemac = "0.10"
uniffi = { version = "0.31", features = ["cli"] }
serde_json = "1"
