[package]
name = "pigeon-relay"
version = "0.1.0"
edition = "2021"
description = "Pigeon's zero-knowledge, federated ciphertext relay (blind mailbox)."
license = "AGPL-3.0-only"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = "2"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
# APNs push gateway (official deployment only; runtime-gated via env). HTTP/2 to
# APNs with an ES256 provider JWT signed by the app's `.p8` key.
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls"] }
jsonwebtoken = "10"
